--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 </div>
 </div>
 
-<p style="color: gray; text-align: center; font-size: 20px; font-style: bold;">STAY CONNECTED</p>
+<p style="color: rgb(92, 78, 78); text-align: center; font-size: 20px; font-style: bold;">STAY CONNECTED</p>
 <p style="color: rgb(10, 8, 8); text-align: center; font-size: 35px; font-style: bold;">abushihabhtc@gmail.com</p>
 
 <section class="finishing">
